--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Laboratorio11</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="num_min">Número mínimo</string>
+    <string name="num_maximo">Número máximo</string>
+    <string name="btn_gerar">Gerar número</string>
 
 </resources>
